# anime_downloader

./: .gitignore  Cargo.toml
src/: downloader.rs  main.rs  parser.rs  ui.rs
