[package]
name = "anime_downloader"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "stream"] }
indicatif = "0.17.7"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
